<resources>
    <string name="app_name">DevHub Portfolio</string>

    <string name="title_calculator">Project Budget Estimator</string>
    <string name="hint_hourly_pay">Hourly Pay</string>
    <string name="hint_amount_time">Amount of Time (hours)</string>
    <string name="hint_budget">Total Project Budget</string>
    <string name="btn_calculate">Calculate Missing Value</string>

    <string name="btn_view_projects">View My Developer Projects</string>

    <string name="next">Next</string>
    <string name="previous">Previous</string>
    <string name="lorem_ipsum">Lorem ipsum dolor sit amet.</string>
    <string name="action_settings">Settings</string>
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
</resources>